<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corAtividade"
    android:orientation="horizontal"
    android:padding="4dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="2dp"
        android:layout_weight="1"
        android:background="@color/corFundo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/lblgeracao"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="2dp">
            <Button
                android:id="@+id/btnGerar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="btnGerarOnClick"
                android:text="@string/btngerar" />
            <TextView
                android:id="@+id/txtGerado"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/corAtividade" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/lbldigitacao"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="2dp">
            <Button
                android:id="@+id/btnTransferir"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="btnTransferirOnClick"
                android:text="@string/btntransferir" />

            <EditText
                android:id="@+id/edtTransfere"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:autofillHints="número"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout
            >

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/corAtividade" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/lblpropriedades"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="2dp"
            >

            <Button
                android:id="@+id/btnParidade"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="btnParidadeOnClick"
                android:text="@string/btnparidade" />

            <TextView
                android:id="@+id/txtParidade"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="2dp"
            >

            <Button
                android:id="@+id/btnPrimo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="btnPrimoOnClick"
                android:text="@string/btnprimo" />

            <TextView
                android:id="@+id/txtPrimo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout
            >
    </LinearLayout
        >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_weight="1"
        android:background="@color/corFundo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/lbldivisores"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtDivisores"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@color/cordivisores"
            android:onClick="txtDivisoresOnClick"
            android:paddingStart="10dp"
            android:scrollbars="vertical"
            android:text=""
            android:textSize="18sp" />
        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="btnLimpaTudo"
            android:text="@string/btnlimpar"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>